--- a/views/404.jade
+++ b/views/404.jade
@@ -15,7 +15,7 @@ extends ./layout
   | Sails considers a request to be in a "404: Not Found" state when a user
   | requests a URL which doesn't match any of your app's routes or blueprints.
 
-block body
+block content
   link(href='http://sailsjs.org/styles/fonts.css', rel='stylesheet')
   style.
     /* Styles included inline since you'll probably be deleting this page anyway */
