--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,5 +33,7 @@ html
 
     // SCRIPTS
     script(src="/js/dependencies/sails.io.js")
+    script(src="/js/dependencies/jquery.min.js")
+    script(src="/js/bootstrap.min.js")
     // SCRIPTS END
 
