--- a/views/header.jade
+++ b/views/header.jade
@@ -7,7 +7,7 @@ nav.navbar.navbar-default
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') Omni.House
+      a.navbar-brand(href='/') AlexaBridge
     // Collect the nav links, forms, and other content for toggling
     .collapse.navbar-collapse
       ul.nav.navbar-nav
