--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -15,6 +15,11 @@
  */
 
 @import (inline) '../bower_components/bootstrap/dist/css/bootstrap.min.css';
+@import (inline) '../bower_components/font-awesome/css/font-awesome.min.css';
+@import './common.less';
+@import './fonts.less';
+@import './footer.less';
+@import './layout.less';
 
 // For example:
 //
