--- a/views/header.jade
+++ b/views/header.jade
@@ -1,5 +1,5 @@
-nav.navbar.navbar-default
-  .container-fluid
+nav.navbar.navbar-default.navbar-inverse(style='border-radius: 0')
+  .container
     // Brand and toggle get grouped for better mobile display
     .navbar-header
       button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
