--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,12 +31,12 @@ html
       include footer
 
     // TEMPLATES
-    
+
     // TEMPLATES END
 
     // SCRIPTS
     script(src="/js/dependencies/jquery.min.js")
-    script(src="/js/dependencies/sails.io.js")
+    //- script(src="/js/dependencies/sails.io.js")
     script(src="/js/bootstrap.min.js")
     script(src="/js/parallax.min.js")
     // SCRIPTS END
