--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,7 @@ html
     // STYLES END
 
     block styles
+    include favicon
 
   body
     block header
@@ -36,7 +37,7 @@ html
 
     // SCRIPTS
     script(src="/js/dependencies/jquery.min.js")
-    //- script(src="/js/dependencies/sails.io.js")
+    script(src="/js/dependencies/sails.io.js")
     script(src="/js/bootstrap.min.js")
     script(src="/js/parallax.min.js")
     // SCRIPTS END
