--- a/views/header.jade
+++ b/views/header.jade
@@ -1,4 +1,4 @@
-nav.navbar.navbar-default.navbar-inverse(style='border-radius: 0')
+nav.navbar.navbar-default(style='border-radius: 0')
   .container
     // Brand and toggle get grouped for better mobile display
     .navbar-header
@@ -7,7 +7,8 @@ nav.navbar.navbar-default.navbar-inverse(style='border-radius: 0')
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') AlexaBridge
+      a.navbar-brand(href='/')
+        img(src='images/logo-side.png' style='height: 18px')
     // Collect the nav links, forms, and other content for toggling
     .collapse.navbar-collapse
       ul.nav.navbar-nav
