--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -3,15 +3,17 @@ extends ../layout
 block content
   .parallax-window(data-parallax='scroll', data-image-src='/images/alexa.jpg', style='margin-top: -20px; height: 100%')
     .container
-      .col-sm-12
-        h1.text-center(style='color: #eee; font-size: 60px; margin-top: 80px')
-          | Control Indigo from Alexa
+      .row
+        .col-sm-12
+          h1.text-center(style='color: #eee; font-size: 60px; margin-top: 80px')
+            | Control Indigo from Alexa
 
-        p.text-center(style='margin-top: 90px')
-          img(src='/images/alexa.png' style='width: 150px; border-radius: 20px')
-          i.fa.fa-arrow-right.mr-40.ml-40(style='color: #eee; font-size: 50px')
-          img(src='/images/indigo.png' style='width: 150px')
+      .row
+        .col-xs-10.col-xs-offset-1.col-md-6.col-md-offset-3
+          .image-center.text-center(style='margin-top: 90px')
+            img.img-responsive(src='/images/alexa-to-indigo.png')
 
+      .row
         p.text-center(style='margin-top: 90px')
           a.btn.btn-success.btn-lg(href='/users/login') Get Started
           a.btn.btn-default.btn-lg.ml-20(href='/learn-more') Learn More
