--- a/views/header.jade
+++ b/views/header.jade
@@ -8,7 +8,7 @@ nav.navbar.navbar-default(style='border-radius: 0')
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href='/')
-        img(src='images/logo-side.png' style='height: 18px')
+        img(src='/images/logo-side.png' style='height: 19px; width: 183px')
     // Collect the nav links, forms, and other content for toggling
     .collapse.navbar-collapse
       ul.nav.navbar-nav
