--- a/views/integration/new.jade
+++ b/views/integration/new.jade
@@ -10,12 +10,12 @@ block content
             option(value='Indigo') Indigo
 
         .form-group
-          input.form-control(type='text', name='username', placeholder='Username', required='', autofocus='')
+          input.form-control(type='text', name='data[username]', placeholder='Username', required='', autofocus='')
 
         .form-group
-          input.form-control(type='password', name='password', placeholder='Password', required='')
+          input.form-control(type='password', name='data[password]', placeholder='Password', required='')
 
         .form-group
-          input.form-control(type='text', name='url', placeholder='Url', required='')
+          input.form-control(type='text', name='data[host]', placeholder='Url', required='')
 
         button.btn.btn-lg.btn-primary.btn-block(type='submit') Create
